<resources>
    <string name="app_name">pinBeeFrontEnD</string>
    <string name="welcome_1_message">We are here to give cash advanced with no interest in 7 days, with lowest administration fee.</string>
    <string name="welcome_2_message">The most innovative apllication where loan is given based on a credit score. Loan can be processed without repetitious administration.</string>
    <string name="welcome_3_message"></string>
    <string name="welcome_4_message"></string>
    <string name="welcome_5_message">Application process and approval are done within 5 minutes, and soon you will receive your loan and your credit score.</string>
    <string name="welcome_5_title"><b>How long does it take for the process and approval?</b></string>
    <string name="welcome_6_description"><b>You are ready to propose for a loan.</b></string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up_1_title">Contact Info</string>
    <string name="sign_up_agreement">I agree to terms and conditions.</string>
    <string name="sign_up_2_title">Scan Your ID</string>
    <string name="sign_up_3_title">Scan Your Face</string>
    <string name="sign_up_4_title">Scan Your Work Photo</string>
    <string name="sign_up_5_title">Scan Your Credit Card</string>
    <string name="sign_up_6_title">Scan Your BPJS Card</string>
    <string name="address">Personal Info</string>
    <string name="personal_address">Home address</string>
    <string name="rent">Rent</string>
    <string name="own">Alone</string>
    <string name="relatives">Parents/Relatives</string>
    <string name="stay_duration">How long have you been staying there?</string>
    <string name="work_info">Work Info</string>
    <string name="company_name">Company name</string>
    <string name="work_address">Company address</string>
    <string name="permanent">Permanent</string>
    <string name="contract">Contract</string>
    <string name="work_duration">Contract duration in current company?</string>
    <string name="total_work_duration">Your total work experience duration?</string>
    <string name="economic_info">Finance Info</string>
    <string name="current_wage">Your current salary</string>
    <string name="current_edu">Your highest education</string>
    <string name="middle_school">Middle school</string>
    <string name="high_school">High school</string>
    <string name="university">University</string>
    <string name="others">Other</string>
    <string name="marital_status">Marital Status</string>
    <string name="married">Married</string>
    <string name="single">Single</string>
    <string name="sign_up_7_title">Scan Your Paycheck</string>
    <string name="score_credit_terms_title">Score Credit Terms</string>
    <string name="skor_kredit_anda">Your Credit Score</string>
    <string name="delay_loan_terms"><![CDATA[<p>According to your credit score, you may propose <b>emergency loan</b> with the maximum of Rp5.000.000,00 in a 1-minute process.<p> Do you want to propose for emergency loan?]]></string>
    <string name="sign_up_8_title">Contact Info</string>
    <string name="log_in">Login</string>
    <string name="reason_for_loan">Reason for loan</string>
    <string name="mock_max_loan_explanation"><![CDATA[According to your credit score, you can receive up to <b>Rp3.000.000,00</b>.]]></string>
    <string name="loan_amount">Loan amount</string>
    <string name="pinBee">pinBee</string>
    <string name="ajukan_pinjaman">Propose for a loan</string>
    <string name="ringkasan">Cash Advance Summary</string>
    <string name="profil">Profile</string>
    <string name="pinjaman_diterima">Loan Approved</string>
    <string name="info_saldo">Balance Info</string>
    <string name="tunda_pinjaman">Delay Loan</string>
    <string name="skor_kredit">Credit Score</string>
    <string name="daftar">Register</string>
    <string name="sign_up_3_subtitle">Face the camera.</string>
    <string name="apply_for_loan">Apply for loan</string>
    <string name="payment">Payment</string>
    <string name="top_up_pinbee_pay">Top up pinBee pay</string>
    <string name="improve_credit_score">Improve credit score</string>
    <string name="loan_summary">Loan summary</string>
    <string name="next">Next</string>
    <string name="stay_in_pinbee_account">Stay in pinBee account</string>
    <string name="transfer_to_my_bank_account">Transfer to my bank account</string>
    <string name="profile_hint">Click photo to open profile</string>
    <string name="confirm">Confirm</string>
    <string name="cash_advance_available_in_pinbee_pay">Cash Advance available in pinBee pay</string>
    <string name="pinbee_pay">pinBee pay</string>
    <string name="transfer">Transfer</string>
    <string name="shop">Shop</string>
    <string name="credit_score">Credit Score</string>
    <string name="credit_score_instruction">You are eligible for a loan with max limit of Rp5.000.000,00. Click Appy Loan button.</string>
    <string name="funds_transfer">Funds Transfer</string>
    <string name="sender">Sender</string>
    <string name="money_limit">Money Limit</string>
    <string name="amount">Amount</string>
    <string name="go_to_home">Go to Home</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="payment_due">Payment Due</string>
    <string name="pay">Pay</string>
    <string name="unused_credit">Unused Credit</string>
    <string name="summary">Summary</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="top_up">Top Up</string>
    <string name="transactions">Transactions</string>
</resources>