<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/credit_score_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolBarTheme">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/forte"
            android:text="@string/skor_kredit"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_size"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/toolbar_dropshadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skor_kredit_anda"
                android:textAlignment="center"
                android:textSize="@dimen/page_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/credit_score"
                android:layout_width="match_parent"
                android:layout_height="@dimen/welcome_image_dimension"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="7,37"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="112sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/score_credit_terms_title"
                android:textAlignment="center"
                android:textSize="@dimen/form_section_title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score_credit_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/button_primary"
                android:onClick="scoreOK"
                android:text="@string/next"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>