<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/propose_loan_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolBarTheme">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/forte"
            android:text="@string/ajukan_pinjaman"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_size"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/toolbar_dropshadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/max_loan_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mock_max_loan_explanation" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/form_icon_width"
                    android:layout_height="match_parent"
                    android:src="@drawable/reason" />

                <EditText
                    android:id="@+id/reason_for_loan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:hint="@string/reason_for_loan"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/form_icon_width"
                    android:layout_height="match_parent"
                    android:src="@drawable/amount" />

                <EditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:hint="@string/loan_amount"
                    android:inputType="number" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/button_primary"
                android:onClick="confirmForm"
                android:padding="@dimen/default_margin"
                android:text="Konfirmasi"
                android:textColor="@color/white"></Button>

        </LinearLayout>

    </ScrollView>


</LinearLayout>