<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolBarTheme">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/finbee" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/forte"
            android:text="@string/pinBee"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_size"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/toolbar_top"
        android:background="@drawable/toolbar_dropshadow" />

    <ScrollView
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/navbar"
        android:layout_below="@id/shadow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/big_icon_size"
                    android:layout_weight="1"
                    android:src="@drawable/credit_score" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/big_icon_size"
                    android:layout_weight="1"
                    android:src="@drawable/sale" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/big_icon_size"
                    android:layout_weight="1"
                    android:src="@drawable/inbox" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@drawable/rectangle_light_grey"
                android:orientation="vertical"
                android:padding="@dimen/default_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_due"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginRight="@dimen/half_default_margin"
                        android:layout_weight="1"
                        android:src="@drawable/calendar_red" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/half_default_margin"
                        android:layout_weight="3"
                        android:text="Cash Advance Rp697.662,50"
                        android:textSize="12sp" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="@dimen/icon_size"
                        android:layout_weight="1"
                        android:background="@drawable/button_primary"
                        android:text="@string/pay"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginRight="@dimen/half_default_margin"
                        android:layout_weight="1"
                        android:src="@drawable/calendar_blue" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/half_default_margin"
                        android:layout_weight="3"
                        android:text="Emergency Loan Rp3.500.000,00"
                        android:textSize="12sp" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="@dimen/icon_size"
                        android:layout_weight="1"
                        android:background="@drawable/button_primary"
                        android:text="@string/pay"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@drawable/rectangle_light_grey"
                android:orientation="vertical"
                android:padding="@dimen/default_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/half_default_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginRight="@dimen/half_default_margin"
                        android:layout_weight="1"
                        android:text="@string/unused_credit"
                        android:textAlignment="viewEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/half_default_margin"
                        android:layout_weight="1"
                        android:text="Rp1.500.000,00"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:src="@drawable/summary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/summary"
                            android:textAlignment="center"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:src="@drawable/bank_transfer" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/transfer"
                            android:textAlignment="center"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:src="@drawable/navbar_shop" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/apply_loan"
                            android:textAlignment="center"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@drawable/rectangle_light_grey"
                android:orientation="vertical"
                android:padding="@dimen/default_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/half_default_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginRight="@dimen/half_default_margin"
                        android:layout_weight="1"
                        android:text="@string/pinbee_pay"
                        android:textAlignment="viewEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/half_default_margin"
                        android:layout_weight="1"
                        android:text="Rp3.612.337,50"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:src="@drawable/summary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/summary"
                            android:textAlignment="center"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:src="@drawable/top_up" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/top_up"
                            android:textAlignment="center"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:src="@drawable/transaction" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/transactions"
                            android:textAlignment="center"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/navbar"
        android:background="@drawable/navbar_dropshadow" />

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/light_grey"
        android:orientation="horizontal"
        android:padding="@dimen/half_default_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="GoHome"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:src="@drawable/navbar_home" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAlignment="center"
                android:textSize="8sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:src="@drawable/navbar_wallet" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pinbee_pay"
                android:textAlignment="center"
                android:textSize="8sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:src="@drawable/navbar_shop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop"
                android:textAlignment="center"
                android:textSize="8sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:src="@drawable/navbar_info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textAlignment="center"
                android:textSize="8sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>